# ops-core/src/modules/quotes/routes.ts
@@ -1,0 +1,11 @@
+import { Router } from "express";
+import { withIdempotency } from "../../middlewares/idempotency.middleware";
+import { handleValidation } from "../../utils/validation.utils";
+import { QuotesController } from "./controller";
+import { createQuoteValidators } from "./validators";
+
+const router = Router();
+
+router.post("/", withIdempotency(), createQuoteValidators, handleValidation, QuotesController.generate);
+
+export default router;
